--- a/bitnami/mariadb-galera/templates/pdb.yaml
+++ b/bitnami/mariadb-galera/templates/pdb.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.podDisruptionBudget.enabled }}
+{{- if .Values.podDisruptionBudget.create }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
