--- a/bitnami/mariadb-galera/templates/statefulset.yaml
+++ b/bitnami/mariadb-galera/templates/statefulset.yaml
@@ -154,8 +154,20 @@ spec:
               name: {{ template "mariadb-galera.fullname" . }}
             {{- end }}
               key: ldap-bindpw
+        - name: MARIADB_LDAP_NSS_INITGROUPS_IGNOREUSERS
+          value: {{ .Values.ldap.nss_initgroups_ignoreusers | default "root,nslcd" | quote }}
+        {{- if .Values.ldap.bslookup }}
         - name: MARIADB_LDAP_BASE_LOOKUP
           value: {{ .Values.ldap.bslookup }}
+        {{- end }}
+        {{- if .Values.ldap.scope }}
+        - name: MARIADB_LDAP_SCOPE
+          value: {{ .Values.ldap.scope }}
+        {{- end }}
+        {{- if .Values.ldap.tls_reqcert }}
+        - name: MARIADB_LDAP_TLS_REQCERT
+          value: {{ .Values.ldap.tls_reqcert }}
+        {{- end }}
         {{- end }}
         {{- if .Values.extraFlags }}
         - name: MARIADB_EXTRA_FLAGS
