--- a/bitnami/mariadb-galera/values-production.yaml
+++ b/bitnami/mariadb-galera/values-production.yaml
@@ -163,6 +163,9 @@ ldap:
   # binddn:
   # bindpw:
   # bslookup:
+  # nss_initgroups_ignoreusers: root,nslcd
+  # scope:
+  # tls_reqcert:
 
 ## Configure MariaDB with a custom my.cnf file
 ## ref: https://mysql.com/kb/en/mysql/configuring-mysql-with-mycnf/#example-of-configuration-file
