--- a/bitnami/mxnet/templates/server-statefulset.yml
+++ b/bitnami/mxnet/templates/server-statefulset.yml
@@ -181,13 +181,7 @@ spec:
       {{- end }}
     spec:
       accessModes: {{ toYaml .Values.persistence.accessModes | nindent 8 }}
-      {{- if .Values.persistence.storageClass }}
-      {{- if (eq "-" .Values.persistence.storageClass) }}
-      storageClassName: ""
-      {{- else }}
-      storageClassName: {{ .Values.persistence.storageClass | quote }}
-      {{- end }}
-      {{- end }}
+      storageClassName: {{ include "mxnet.storageClass" . }}
       resources:
         requests:
           storage: {{ .Values.persistence.size | quote }}
