Add changes to Chartmuseum on Harbor Chart
Signed-off-by: Miguel A. Cabrera Minagorri <macabrera@bitnami.com>

--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-pvc.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-pvc.yaml
@@ -11,8 +11,7 @@ metadata:
   annotations:
     helm.sh/resource-policy: keep
   {{- end }}
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: chartmuseum
 spec:
   accessModes:
