--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-cm-envvars.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-cm-envvars.yaml
@@ -3,12 +3,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "{{ template "harbor.chartmuseum" . }}-envvars"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
-
+  labels:  {{ include "harbor.labels" . | nindent 4 }}
+    app.kubernetes.io/component: chartmuseum
 data:
   PORT: {{ .Values.chartmuseum.port | quote }}
-  {{- if and .Values.chartmuseum.useRedisCache }}
+  {{- if .Values.chartmuseum.useRedisCache }}
   CACHE: "redis"
   CACHE_REDIS_ADDR: "{{ include "harbor.redis.host" . }}:{{ include "harbor.redis.port" . }}"
   CACHE_REDIS_DB: "{{ include "harbor.redis.chartmuseumDatabaseIndex" . }}"
