--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-dpl.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-dpl.yaml
@@ -3,8 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "{{ template "harbor.chartmuseum" . }}"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
     app.kubernetes.io/component: chartmuseum
 spec:
   replicas: {{ .Values.chartmuseum.replicas }}
@@ -18,7 +17,7 @@ spec:
         {{ include "harbor.matchLabels" . | nindent 8 }}
         app.kubernetes.io/component: chartmuseum
       annotations:
-        checksum/configmap-envvars: {{ include (print $.Template.BasePath "/chartmuseum/chartmuseum-cm.yaml") . | sha256sum }}
+        checksum/configmap-envvars: {{ include (print $.Template.BasePath "/chartmuseum/chartmuseum-cm-envvars.yaml") . | sha256sum }}
         checksum/secret: {{ include (print $.Template.BasePath "/chartmuseum/chartmuseum-secret.yaml") . | sha256sum }}
         {{- if .Values.chartmuseum.podAnnotations }}
         {{ toYaml .Values.chartmuseum.podAnnotations | indent 8 }}
@@ -77,7 +76,7 @@ spec:
         {{ toYaml .Values.extraEnvVars | indent 8 }}
         {{- end }}
         ports:
-        - containerPort: 8080
+        - containerPort: {{ .Values.chartmuseum.port }}
           name: http
         volumeMounts:
         - name: chartmuseum-data
@@ -117,13 +116,13 @@ spec:
             - key: TLS_KEY
               path: server.key
       {{- end }}
-  {{- with .Values.core.nodeSelector }}
+  {{- with .Values.chartmuseum.nodeSelector }}
   nodeSelector: {{ tpl (toYaml .) $ | nindent 8 }}
   {{- end }}
-  {{- with .Values.core.affinity }}
+  {{- with .Values.chartmuseum.affinity }}
   affinity: {{ tpl (toYaml .) $ | nindent 8 }}
   {{- end }}
-  {{- with .Values.core.tolerations }}
+  {{- with .Values.chartmuseum.tolerations }}
   tolerations: {{ tpl (toYaml .) $ | nindent 8 }}
   {{- end }}
 {{- end }}
