--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-secret.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-secret.yaml
@@ -3,11 +3,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ template "harbor.chartmuseum" . }}-secret"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
+  labels: {{ include "harbor.labels" . | nindent 4 }}
+    app.kubernetes.io/component: chartmuseum
 type: Opaque
 data:
-  {{- if and .Values.chartmuseum.useRedisCache }}
+  {{- if .Values.chartmuseum.useRedisCache }}
   CACHE_REDIS_PASSWORD: {{ include "harbor.redis.rawPassword" . | b64enc | quote }}
   {{- end }}
   {{- $storage := .Values.persistence.imageChartStorage }}
