--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-svc.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-svc.yaml
@@ -3,15 +3,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "harbor.chartmuseum" . }}"
-  labels:
-    {{ include "harbor.labels" . | nindent 4 }}
-    app.kubernetes.io/component: chartmuseum-service
+  labels: {{ include "harbor.labels" . | nindent 4 }}
+    app.kubernetes.io/component: chartmuseum
 spec:
   ports:
     - port: 80
       name: http
-      targetPort: 8080
-  selector:
-    {{ include "harbor.matchLabels" . | nindent 4 }}
+      targetPort: http
+  selector: {{ include "harbor.matchLabels" . | nindent 4 }}
     component: chartmuseum
 {{- end }}
