[bitnami/tensorflow-resnet] Enable Rest API and configure metrics
Signed-off-by: Andrés Bono <andresbono@vmware.com>

--- a/bitnami/tensorflow-resnet/templates/svc.yaml
+++ b/bitnami/tensorflow-resnet/templates/svc.yaml
@@ -12,5 +12,7 @@ spec:
   ports:
   - port: {{ .Values.server.port }}
     protocol: TCP
+  - port: {{ .Values.server.restApiPort }}
+    protocol: TCP
   selector:
     app: {{ template "tensorflow-resnet.name" . }}
