--- a/bitnami/tensorflow-resnet/templates/deployment.yaml
+++ b/bitnami/tensorflow-resnet/templates/deployment.yaml
@@ -79,41 +79,16 @@ spec:
         env:
         - name: TENSORFLOW_SERVING_MODEL_NAME
           value: "resnet"
+        - name: TENSORFLOW_SERVING_PORT_NUMBER
+          value: {{ .Values.server.port }}
+        - name: TENSORFLOW_SERVING_REST_API_PORT_NUMBER
+          value: {{ .Values.server.restApiPort }}
+        - name: TENSORFLOW_SERVING_ENABLE_MONITORING
+          value: {{ ternary "yes" "no" .Values.metrics.enabled | quote }}
         volumeMounts:
         - name: seed
           mountPath: "/bitnami/model-data"
-{{- if .Values.metrics.enabled }}
-      - name: metrics
-        image: {{ template "tensorflow-resnet.metrics.image" . }}
-        imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
-        command: ['python', 'tf_serving_exporter.py', '--tf_port', '{{ .Values.server.port }}', '--port', {{ .Values.metrics.port }}, '--model_name', 'resnet']
-        ports:
-        - name: metrics
-          containerPort: {{ .Values.metrics.port }}
-        {{- if .Values.metrics.livenessProbe.enabled }}
-        livenessProbe:
-          httpGet:
-            path: /metrics
-            port: metrics
-          initialDelaySeconds: {{ .Values.metrics.livenessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.metrics.livenessProbe.periodSeconds }}
-          timeoutSeconds: {{ .Values.metrics.livenessProbe.timeoutSeconds }}
-          successThreshold: {{ .Values.metrics.livenessProbe.successThreshold }}
-          failureThreshold: {{ .Values.metrics.livenessProbe.failureThreshold }}
         {{- end }}
-        {{- if .Values.metrics.readinessProbe.enabled }}
-        readinessProbe:
-          httpGet:
-            path: /metrics
-            port: metrics
-          initialDelaySeconds: {{ .Values.metrics.readinessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.metrics.readinessProbe.periodSeconds }}
-          timeoutSeconds: {{ .Values.metrics.readinessProbe.timeoutSeconds }}
-          successThreshold: {{ .Values.metrics.readinessProbe.successThreshold }}
-          failureThreshold: {{ .Values.metrics.readinessProbe.failureThreshold }}
-        {{- end }}
-        resources:
-  {{ toYaml .Values.metrics.resources | indent 10 }}
 {{- end }}
       volumes:
       - name: seed
