--- a/bitnami/harbor/templates/chartmuseum/chartmuseum-svc.yaml
+++ b/bitnami/harbor/templates/chartmuseum/chartmuseum-svc.yaml
@@ -11,5 +11,5 @@ spec:
       name: http
       targetPort: http
   selector: {{ include "harbor.matchLabels" . | nindent 4 }}
-    component: chartmuseum
+    app.kubernetes.io/component: chartmuseum
 {{- end }}
