--- a/bitnami/mariadb-galera/templates/secrets.yaml
+++ b/bitnami/mariadb-galera/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
-  mariadb-mariadb-root-password: {{ ternary (randAlphaNum 10) .Values.rootUser.password (empty .Values.rootUser.password) | b64enc | quote }}
+  mariadb-root-password: {{ ternary (randAlphaNum 10) .Values.rootUser.password (empty .Values.rootUser.password) | b64enc | quote }}
   mariadb-password: {{ ternary (randAlphaNum 10) .Values.db.password (empty .Values.db.password) | b64enc | quote }}
   mariadb-galera-mariabackup-password: {{ ternary (randAlphaNum 10) .Values.galera.mariabackup.password (empty .Values.galera.mariabackup.password) | b64enc | quote }}
   {{- if and .Values.ldap.enabled .Values.ldap.bindpw }}
