--- a/bitnami/wildfly/templates/pvc.yaml
+++ b/bitnami/wildfly/templates/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ ternary "default" (include "jenkins.storageClass" .) (eq (include "jenkins.storageClass" .) "") }}
+    volume.alpha.kubernetes.io/storage-class: {{ ternary "default" (include "wildfly.storageClass" .) (empty (include "wildfly.storageClass" .)) }}
 spec:
   accessModes:
     - {{ .Values.persistence.accessMode | quote }}
