Add a way to specify additional arguments to metrics-server using declarative configuration

--- a/bitnami/metrics-server/values.yaml
+++ b/bitnami/metrics-server/values.yaml
@@ -57,6 +57,10 @@ apiService:
 ##
 securePort: 8443
 
+## A list of extra arguments to pass to the metrics-server
+##
+extraArguments: []
+
 service:
   type: ClusterIP
   port: 443
