--- a/bitnami/metrics-server/templates/deployment.yaml
+++ b/bitnami/metrics-server/templates/deployment.yaml
@@ -36,3 +36,6 @@ spec:
         command:
         - metrics-server
         - --secure-port={{ .Values.securePort }}
+{{- if .Values.extraArguments }}
+{{ toYaml .Values.extraArguments | indent 8 }}
+{{- end }}
